--- a/percent.html
+++ b/percent.html
@@ -21,7 +21,7 @@
 <body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
     <div class="container bg-white rounded-2xl shadow-xl p-8 space-y-6 transform transition-transform duration-300 hover:scale-105">
         <h1 class="text-3xl font-bold text-gray-800 text-center">Percentage Calculator</h1>
-        <div class="text-center"><a href="percent.html" class="text-blue-500 hover:underline">Go to percent.html</a></div>
+        <div class="text-center"><a href="index.html" class="text-blue-500 hover:underline">Go to index.html</a></div>
         <p class="text-center text-gray-600">Enter a value and a percentage change to see the new value.</p>
         
         <!-- Input fields container -->
