Add Umami analytics script to qr-gui.html

--- a/qr-gui.html
+++ b/qr-gui.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>QR Code Generator with Color Picker</title>
     <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="532d27fc-4b22-4e5e-a0a7-aa91b315db68"></script>
     <style>
         body { font-family: Arial, sans-serif; margin: 2em; }
         .controls { margin-bottom: 1em; }
