--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Links</title>
     <script src="https://cdn.tailwindcss.com"></script>
       <script defer src="https://cloud.umami.is/script.js" data-website-id="db8120ea-7073-4a37-894d-8185dc1c3313"></script>
+          <script src="https://torenor.github.io/percent/tnClickClient.js"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
     <div class="container bg-white rounded-2xl shadow-xl p-8 space-y-6">
