--- a/qr-gui.html
+++ b/qr-gui.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
     <script defer src="https://cloud.umami.is/script.js" data-website-id="db8120ea-7073-4a37-894d-8185dc1c3313"></script>
  
-        <script src="https://torenor.github.io/percent/tnClickClient.js"></script>
+        <script src="https://torenor.github.io/percent/tnClickClient.min.js"></script>
     <style>
         body { font-family: Arial, sans-serif; margin: 2em; }
         .controls { margin-bottom: 1em; }
