--- a/index.html
+++ b/index.html
@@ -3,15 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Links</title>
+    <title>Project Index</title>
     <script src="https://cdn.tailwindcss.com"></script>
-      <script defer src="https://cloud.umami.is/script.js" data-website-id="db8120ea-7073-4a37-894d-8185dc1c3313"></script>
-          <script src="https://torenor.github.io/percent/tnClickClient.min.js"></script>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="db8120ea-7073-4a37-894d-8185dc1c3313"></script>
+    <script src="https://torenor.github.io/percent/tnClickClient.min.js"></script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
-    <div class="container bg-white rounded-2xl shadow-xl p-8 space-y-6">
-        <div class="text-center"><a href="percent.html" class="text-blue-500 hover:underline">Go to percent.html</a></div>
-        <div class="text-center"><a href="qr-gui.html" class="text-blue-500 hover:underline">Go to qr-gui.html</a></div>
+<body class="bg-gray-900 text-white flex items-center justify-center min-h-screen p-4 font-sans">
+    <div class="w-full max-w-4xl">
+        <h1 class="text-5xl font-bold text-center mb-12 text-cyan-400">Project Pages</h1>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+            <a href="percent.html" class="bg-gray-800 rounded-2xl shadow-lg hover:shadow-cyan-500/50 transform hover:-translate-y-2 transition-all duration-300 ease-in-out p-8 block">
+                <h2 class="text-2xl font-semibold mb-2 text-cyan-300">percent.html</h2>
+                <p class="text-gray-400">Navigate to the percentage calculation page.</p>
+            </a>
+            <a href="qr-gui.html" class="bg-gray-800 rounded-2xl shadow-lg hover:shadow-cyan-500/50 transform hover:-translate-y-2 transition-all duration-300 ease-in-out p-8 block">
+                <h2 class="text-2xl font-semibold mb-2 text-cyan-300">qr-gui.html</h2>
+                <p class="text-gray-400">Navigate to the QR code generator GUI.</p>
+            </a>
+            <a href="import_local_file.html" class="bg-gray-800 rounded-2xl shadow-lg hover:shadow-cyan-500/50 transform hover:-translate-y-2 transition-all duration-300 ease-in-out p-8 block">
+                <h2 class="text-2xl font-semibold mb-2 text-cyan-300">import_local_file.html</h2>
+                <p class="text-gray-400">Navigate to the import local file page.</p>
+            </a>
+            <a href="jsonata_tool.html" class="bg-gray-800 rounded-2xl shadow-lg hover:shadow-cyan-500/50 transform hover:-translate-y-2 transition-all duration-300 ease-in-out p-8 block">
+                <h2 class="text-2xl font-semibold mb-2 text-cyan-300">jsonata_tool.html</h2>
+                <p class="text-gray-400">Navigate to the JSONata tool page.</p>
+            </a>
+        </div>
     </div>
 </body>
 </html>
