--- a/qr-gui.html
+++ b/qr-gui.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>QR Code Generator with Color Picker</title>
     <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
-    <script defer src="https://cloud.umami.is/script.js" data-website-id="db8120ea-7073-4a37-894d-8185dc1c3313"></script>
+      <script defer src="https://cloud.umami.is/script.js" data-website-id="db8120ea-7073-4a37-894d-8185dc1c3313" data-tag="homepage-layout-a"></script>
  
         <script src="https://torenor.github.io/percent/tnClickClient.js"></script>
     <style>
