netifly click hosting

--- a/import_local_file.html
+++ b/import_local_file.html
@@ -8,12 +8,13 @@
     <script type="text/javascript" src="https://unpkg.com/tabulator-tables@6.3.1/dist/js/tabulator.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
     <script type="text/javascript" src="https://oss.sheetjs.com/sheetjs/xlsx.full.min.js"></script>
-    <script src="https://torenor.github.io/percent/tnClickClient.js"></script>
-       <script defer src="https://cloud.umami.is/script.js" data-website-id="db8120ea-7073-4a37-894d-8185dc1c3313"></script>
+
+  
+        <script src="https://68fbcb9ed22b696f8416047d--tnek.netlify.app/tn_ek_ClickClient.js"></script>
     
 </head>
 <body>
-    <h1>Load Data</h1>
+    <h1>Tabulator Load Data fra csv json eller xlsx h1 taggen</h1>
 
     <div style="padding: 10px; border: 1px solid #ccc; margin-bottom: 10px;">
         <h3>From Local File: .json, .xlsx, .csv</h3>
@@ -86,6 +87,7 @@
             return result;
         }
 
+        
         // Handle pasted JSON
         document.getElementById("load-json-button").addEventListener("click", function(){
             var jsonString = document.getElementById("json-input").value;
