--- a/jsonata_tool.html
+++ b/jsonata_tool.html
@@ -13,7 +13,8 @@
         #result { white-space: pre-wrap; word-wrap: break-word; font-family: monospace; }
         .error-message { color: red; font-weight: bold; }
     </style>
-   <script src="https://torenor.github.io/percent/tnClickClient.js"></script>
+   <script src="https://tn-ek.vercel.app/tn_ek_ClickClient.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/jsonata@2.0.4/jsonata.min.js"></script>
     <link href="https://unpkg.com/tabulator-tables@5.5.2/dist/css/tabulator.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.5.2/dist/js/tabulator.min.js"></script>
