--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script defer src="https://cloud.umami.is/script.js" data-website-id="db8120ea-7073-4a37-894d-8185dc1c3313"></script>
     <script src="https://torenor.github.io/percent/tnClickClient.min.js"></script>
 </head>
+
+<img src="https://cloud.umami.is/p/fn33d8SMx">
 <body class="bg-gray-900 text-white flex items-center justify-center min-h-screen p-4 font-sans">
     <div class="w-full max-w-4xl">
         <h1 class="text-5xl font-bold text-center mb-12 text-cyan-400">Project Pages</h1>
@@ -31,4 +33,5 @@
         </div>
     </div>
 </body>
+
 </html>
