--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Project Index</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://cloud.umami.is/script.js" data-website-id="db8120ea-7073-4a37-894d-8185dc1c3313"></script>
-
+      <script src="https://cc.tnixt.com/adv.js" defer></script>
 </head>
 
 <img src="https://cloud.umami.is/p/fn33d8SMx">
