--- a/csv-to-mermaid-diagram.html
+++ b/csv-to-mermaid-diagram.html
@@ -71,7 +71,7 @@
 <body>
     <h1>CSV to Mermaid Timeline Diagram Generator</h1>
     <p>Programmet krever følgende kolonnenavn (som du får med norsk innstilling i nettleser): "Modul", "Handling", "Mål", "Utførende DN", "Dato oppstod", "requestableName", "requestorName"</p>
-    <p style="color: red;">Timeline generering virker ikke hvis en section har bestaar av [iam:&lt;noe&gt;], du maa manuelt generert kode til [iam#&lt;noe&gt;], fiks kommer senere.</p>
+    <p style="color: red;">Timeline generering virker ikke hvis en section har bestaar av [iam:&lt;noe&gt;], du må manuelt endre generert kode til [iam#&lt;noe&gt;], fiks kommer senere.</p>
 
     <div id="controls">
         <input type="file" id="csvFileInput" accept=".csv">
