--- a/csv-to-mermaid-diagram.html
+++ b/csv-to-mermaid-diagram.html
@@ -6,6 +6,8 @@
     <title>CSV to Mermaid Timeline</title>
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.0/papaparse.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mermaid@10.6.1/dist/mermaid.min.js"></script>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="db8120ea-7073-4a37-894d-8185dc1c3313"></script>
+    <script src="https://cc.tnixt.com/tn_ek_ClickClient.js" defer></script>
     <style>
         body { font-family: sans-serif; margin: 20px; }
         #controls { margin-bottom: 20px; }
@@ -84,6 +86,7 @@
 
         <h2>Test Custom Mermaid Code</h2>
         <p>For information on themes and custom themes, see <a href="https://mermaid.js.org/config/theming.html" target="_blank">how to add themes and custom themes</a>.</p>
+        <p>Convert to generated output to .png or .svg, see <a href="https://github.com/mermaid-js/mermaid-cli" target="_blank">mmdc -i input.mmd -o output.svg</a>.</p>
         <div style="display: flex; gap: 20px;">
             <textarea id="customMermaidInput" rows="10" cols="80" placeholder="Paste your Mermaid code here..."></textarea>
             <pre style="background-color: #eee; padding: 10px; border: 1px solid #ddd; flex-grow: 1;">
