--- a/csv-to-mermaid-diagram.html
+++ b/csv-to-mermaid-diagram.html
@@ -86,7 +86,7 @@
 
         <h2>Test Custom Mermaid Code</h2>
         <p>For information on themes and custom themes, see <a href="https://mermaid.js.org/config/theming.html" target="_blank">how to add themes and custom themes</a>.</p>
-        <p>Convert to generated output to .png or .svg, see <a href="https://github.com/mermaid-js/mermaid-cli" target="_blank">mmdc -i input.mmd -o output.svg</a>.</p>
+        <p>Convert the generated output to .png or .svg, see <a href="https://github.com/mermaid-js/mermaid-cli" target="_blank">mmdc -i input.mmd -o output.svg</a>.</p>
         <div style="display: flex; gap: 20px;">
             <textarea id="customMermaidInput" rows="10" cols="80" placeholder="Paste your Mermaid code here..."></textarea>
             <pre style="background-color: #eee; padding: 10px; border: 1px solid #ddd; flex-grow: 1;">
