--- a/csv-to-mermaid-diagram.html
+++ b/csv-to-mermaid-diagram.html
@@ -77,7 +77,8 @@
 <body>
     <h1>CSV to Mermaid Diagram Generator</h1>
     <p>Programmet krever følgende kolonnenavn (som du får med norsk innstilling i nettleser): "Modul", "Handling", "Mål", "Utførende DN", "Dato oppstod", "requestableName", "requestorName"</p>
-    <p style="color: red;">Timeline generering virker ikke hvis en section har bestaar av [iam:&lt;noe&gt;], du maa manuelt generert kode til [iam#&lt;noe&gt;], fiks kommer senere.</p>
+    <p style="color: red;">Timeline generering virker ikke hvis en section består av [iam:&lt;noe&gt;], du må manuelt generert kode til [iam#&lt;noe&gt;], fiks kommer senere.</p>
+	    <p style="color: blue;">Generering av mermaid disagram skjer på bakgrunn av innhold i tabell, dvs. du kan filtrere rader som benyttes til generering. Nåværende versjon har hatt fokus på data fra Modul Workflow, så hvis du filterer på data fra andre moduler kan resultat bli mangelfullt.</p>
 
     <div id="controls">
         <input type="file" id="csvFileInput" accept=".csv">
