--- a/csv-to-mermaid-diagram.html
+++ b/csv-to-mermaid-diagram.html
@@ -77,11 +77,7 @@
 <body>
     <h1>CSV to Mermaid Diagram Generator</h1>
     <p>Programmet krever følgende kolonnenavn (som du får med norsk innstilling i nettleser): "Modul", "Handling", "Mål", "Utførende DN", "Dato oppstod", "requestableName", "requestorName"</p>
-<<<<<<< HEAD
-    <p style="color: red;">NB! programmer gjør om [iam:&lt;noe&gt;] til [iam@&lt;noe&gt;] i mermaid diagrammene pga. syntaksfeil ved generering av diagram.</p>
-=======
-    <p style="color: red;">Pga syntax problemer med Timeline, er generert kode i selve diagram endret til: [iam@&lt;noe&gt;], fiks kommer senere.</p>
->>>>>>> 1751f1cd49ae2c557d9ee27d14fb4edf7eef8711
+    <p style="color: red;">Timeline generering virker ikke hvis en section består av [iam:&lt;noe&gt;], du må manuelt generert kode til [iam@&lt;noe&gt;], fiks kommer senere.</p>
 	    <p style="color: blue;">Generering av mermaid diagram skjer på bakgrunn av innhold i tabell, dvs. du kan filtrere rader som benyttes til generering. Nåværende versjon har hatt fokus på data fra Modul Workflow, så hvis du filterer på data fra andre moduler kan resultat bli mangelfullt.</p>
 
     <div id="controls">
@@ -126,7 +122,7 @@ config:
         </div>
         <br>
         <button id="renderCustomMermaidBtn">Render Custom Mermaid</button>
-        
+        <button id="renderTimeline3MmdBtn">Render from timeline3.mmd</button>
     </div>
 
     <script>
@@ -348,7 +344,18 @@ config:
                 renderMermaidDiagram(customCode);
             });
 
- 
+            renderTimeline3MmdBtn.addEventListener('click', () => {
+                fetch('timeline3.mmd?t=' + new Date().getTime())
+                    .then(response => response.text())
+                    .then(text => {
+                        customMermaidInput.value = text;
+                        renderMermaidDiagram(text);
+                    })
+                    .catch(error => {
+                        console.error('Error fetching timeline3.mmd:', error);
+                        diagramCode.textContent = 'Error fetching timeline3.mmd. See console for details.';
+                    });
+            });
 
             loadDevserverDataBtn.addEventListener('click', async () => {
                 try {
